# eagerbib

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
eagerbib/: crawl_bibtex_data_from_dblp.py  dblp_crawler.py  default_config.yaml  lookup_service.py  main.py  manual_reference_updater.css  manual_reference_updater.py  output_processor.py  updater.py  utils.py
eagerbib/config/: __init__.py  config.py  utils.py
etc/: logo.ai
