[flake8]
select = B,C,E,F,P,T4,W,B9
max-line-length = 100
# taken from pytorch flake8 configuration:
# C408 ignored because we like the dict keyword argument syntax
# E501 is not flexible enough, we're using B950 instead
# Added E731 to allows lambda expressions
ignore = E203,E305,E402,E501,E721,E741,F405,F821,F841,F999,W503,W504,C408,E302,W291,E303,E731

[mypy]
python_version = 3.8

[mypy-pytest]
ignore_missing_imports = True

[mypy-torchvision.*]
ignore_missing_imports = True

[mypy-tqdm]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-IPython.*]
ignore_missing_imports = True

[metadata]
name = eagerbib
version = attr: eagerbib.__version__
author = The Eagerbib Authors
description = A tool for normalizing bibtex with official info.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zimmerrol/eagerbib
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files =
    LICENSE
license = MIT

[options]
package_dir =
    = .
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    argparse
    bibtexparser
    tqdm
    textual
    dataclass-wizard
    certifi
    platformdirs

[options.package_data]
rebiber =
    eagerbib/default_config.yaml
    eagerbib/manual_reference_updater.css

[options.entry_points]
console_scripts =
    eagerbib = eagerbib.main:main
    eagerbib-updater = eagerbib.updater:main

[options.extras_require]
dev =
    pytest-mock
    flake8==4.0.1
    click==8.0.1
    black==22.1.0
    pytest==7.1.1
    pytest-lazy-fixture==0.6.3
    mypy==1.0.1
    isort==5.10.1
    ruff
    types-requests
    types-tqdm

[options.packages.find]
where = .